--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon class = "socials-icons" name="logo-twitter"></ion-icon>
+            <a href="https://github.com/sanjeetstha" class="social-link" target="_blank">
+              <ion-icon class = "socials-icons" name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/mr.sanjeet.shrestha/" class="social-link" target="_blank">
               <ion-icon class = "socials-icons" name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -241,7 +241,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./assets/images/icon-design.png
                 " alt="design icon" width="40">
               </div>
 
@@ -258,7 +258,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.png" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -274,14 +274,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.png" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Web apps</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Professional development of web based applications.
                 </p>
               </div>
 
@@ -290,7 +290,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-photo.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -311,7 +311,7 @@
         <!--
           - testimonials
         -->
-
+<!--
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
@@ -410,7 +410,7 @@
 
         </section>
 
-
+-->
         <!--
           - testimonials modal
         -->
@@ -457,48 +457,48 @@
 
 
         <!--
-          - clients
+          - My Skills
         -->
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">My Upskills</h3>
 
           <ul class="clients-list has-scrollbar">
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                <img src="./assets/images/React1.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
+                <img src="./assets/images/node.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                <img src="./assets/images/express1.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                <img src="./assets/images/mongodb.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                <img src="./assets/images/wordpress.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                <img src="./assets/images/bootstrap.png" alt="client logo">
               </a>
             </li>
 
