--- a/index.html
+++ b/index.html
@@ -663,6 +663,21 @@
             </li>
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Pashupati Chaulagain Memorial Hospital</h4>
+
+              <span>IT Incharge </span>
+
+              <p class="timeline-text">
+                As the IT incharge, I oversee all aspects of the IT environment. 
+                This includes maintaining EHR servers, NAS servers, and Hyper-V servers to ensure data integrity and accessibility.
+                 Additionally, I manage CISCO switches and wireless LAN controllers (WLCs) for network stability and performance.
+                  I conduct onsite user training to ensure staff are proficient in utilizing EHR systems effectively. Furthermore,
+                   I provide ongoing maintenance and support for EHR systems to optimize their functionality and reliability.
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Gaurishankar Multiple Campus</h4>
 
               <span>Asst. IT Officer</span>
