New Changes are made

--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
         <!--
           - service
         -->
-
+          
         <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
-          <ul class="service-list">
-
-            <li class="service-item">
+          <ul class="service-list container">
+            
+            <li class="service-item panel active">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-design.png
@@ -255,7 +255,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item panel">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-dev.png" alt="Web development icon" width="40">
@@ -271,7 +271,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item panel">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-app.png" alt="mobile app icon" width="40">
@@ -287,7 +287,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item panel">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.png" alt="camera icon" width="40">
